#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package ParCorAna
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-19:
- fix bug in viewerFormNDArrays. After gathering data from all the workers, the
  starting offset of each worker was not calculated properly - all but the first had 
  the same offset. The unit tests were passing because I never tested against multiple
  workers. The unit tests now using both multiple servers and multiple workers.

Tag: V00-00-18:
- fix bug with using a different base for forming delays with the delay function
	
Tag: V00-00-17:
- load mask and color files as int8 and int32 respectively in case they are float
- add error checking on mask/color/finecolor, call checkParams function from defaul_config.py
- add user_params 'plot_colors' to control number of colors plotted
- add 'print_delay_curves' to get start/stop of all delay curvers on the screen

	
Tag: V00-00-16:
- previous fix for mult servers slowed things down, server reads were not running in parrallel
- fixed this, see comments in JIRA PSAS-161 - servers now read next array after reporting ready,
  assumption is master will probably pick a different server to scatter
- added print of EventData, added class ScatterDataQueue
  
	
Tag: V00-00-15:
- fix issues with multiple servers: JIRA PSAS-161
  wait for all servers to by ready
  fix bug with selection earliest time
- use 6 servers for unit tests, compare to alt test with 1 server
- change cmp tool to ignore differences in numservers between alttest and maintest
- fix bug with saving finecolor file using parCorAnaMaskColorTool - it was just the color file before
	
Tag: V00-00-14:
- fix bug with writing mask/color files to h5 file.