@@ -382,7 +382,7 @@ from CommSystem import identifyCommSubsystems, identifyServerRanks
 from CommSystem import RunServer, RunMaster, RunWorker, RunViewer
 from CommSystem import runCommSystem
 from CommSystem import CommSystemFramework
-from CommSystemUtil import checkCountsOffsets, divideAmongWorkers, makeLogger, checkParams, formatFileName
+from CommSystemUtil import checkCountsOffsets, divideAmongWorkers, makeLogger, checkParams, formatFileName, imgBoundBox
 from MessageBuffers import SM_MsgBuffer, MVW_MsgBuffer
 from PsanaUtil import parseDataSetString, makePsanaOptions, psanaNdArrays
 from PsanaUtil import readDetectorDataAndEventTimes, getSortedCountersBasedOnSecNsecAtHertz
@@ -398,4 +398,4 @@ __all__ = ['SM_MsgBuffer', 'MVW_MsgBuffer',
            'checkCountsOffsets', 'divideAmongWorkers', 'makeLogger',
            'divideAmongWorkers', 'checkCountsOffsets',
            'WorkerData', 'XCorrBase', 'makeDelayList', 'writeToH5Group',
-            'checkParams', 'formatFileName']
+            'checkParams', 'formatFileName', 'imgBoundBox']
